--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0"
   },
   "dependencies": {
+    "@google/maps": "^1.0.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
